High-contrast fixes

--- a/_sass/components/_download_buttons.scss
+++ b/_sass/components/_download_buttons.scss
@@ -1,6 +1,6 @@
 .btn-primary {
   &:visited {
-    color: $button-foregroundColor-visited !important;
+    color: $button-foregroundColor-visited;
   }
 }
 .btn-download {
